Creaed tabs and fixed some layout problems

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,16 @@ html {
 .font-title {
   font-style: 'BioRhyme';
 }
+
+/* For WebKit (Chrome, Safari) */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #333;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #666;
+}
